tests/ui/closures/closure_cap_coerce_many_fail.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/closure_cap_coerce_many_fail.rs:9:16
   |
LL |       let _ = match "+" {
   |  _____________-
LL | |         "+" => add,
   | |                --- this is found to be of type `fn(i32, i32) -> i32 {add}`
LL | |         "-" => |a, b| (a - b + cap) as i32,
   | |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected fn item, found closure
LL | |         _ => unimplemented!(),
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected fn item `fn(i32, i32) -> i32 {add}`
              found closure `main::{closure#0}`

error[E0308]: `match` arms have incompatible types
  --> $DIR/closure_cap_coerce_many_fail.rs:18:16
   |
LL |       let _ = match "+" {
   |  _____________-
LL | |         "+" => |a, b| (a + b) as i32,
   | |                ---------------------
   | |                |
   | |                the expected closure
   | |                this is found to be of type `main::{closure#1}`
LL | |         "-" => |a, b| (a - b + cap) as i32,
   | |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected closure, found a different closure
LL | |         _ => unimplemented!(),
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected closure `main::{closure#1}`
              found closure `main::{closure#2}`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object

error[E0308]: `match` arms have incompatible types
  --> $DIR/closure_cap_coerce_many_fail.rs:27:16
   |
LL |       let _ = match "+" {
   |  _____________-
LL | |         "+" => |a, b| (a + b + cap) as i32,
   | |                ---------------------------
   | |                |
   | |                the expected closure
   | |                this is found to be of type `main::{closure#3}`
LL | |         "-" => |a, b| (a - b) as i32,
   | |                ^^^^^^^^^^^^^^^^^^^^^ expected closure, found a different closure
LL | |         _ => unimplemented!(),
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected closure `main::{closure#3}`
              found closure `main::{closure#4}`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object

error[E0308]: `match` arms have incompatible types
  --> $DIR/closure_cap_coerce_many_fail.rs:35:16
   |
LL |       let _ = match "+" {
   |  _____________-
LL | |         "+" => |a, b| (a + b + cap) as i32,
   | |                ---------------------------
   | |                |
   | |                the expected closure
   | |                this is found to be of type `main::{closure#5}`
LL | |         "-" => |a, b| (a - b + cap) as i32,
   | |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected closure, found a different closure
LL | |         _ => unimplemented!(),
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected closure `main::{closure#5}`
              found closure `main::{closure#6}`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
